@@ -301,6 +301,7 @@ Rhett Robinson
 Luciano Miguel Ferreira Rocha
 Andrew Rodland
 Miguel Rodríguez (migrax)
+Bob Rossi
 Jason Roth
 Jean-Francois Roy
 Sam S.
